<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@android:style/Theme">

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fieldHintFio2"
        android:ems="20"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/IDFio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FIO"
        android:ems="20"
        style="@style/AppBaseTheme"/>
        android:layout_gravity="left|center_vertical"
        <!--android:layout_marginBottom="1dp" />-->

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fieldHintBdate2"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp"/>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/IDBDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BDate">
    </TextView>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fieldHintSex2"
        android:layout_gravity="left|center_vertical"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp"/>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/IDSex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SEX">
    </TextView>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fieldHintRank2"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp"/>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/IDRank2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RANK">
    </TextView>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fieldHintSalary2"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp"/>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/IDSalary2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salary">
    </TextView>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fieldHintPhone2"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp"/>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/IDPhone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPhoneClick"
        android:clickable="true"
        android:text="Phone"
        android:autoLink="none"
        android:linksClickable="true"
        android:phoneNumber="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fieldHintEmail2"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp" />

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/IDEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EMail"
        android:autoLink="email"
        android:clickable="true"
        android:onClick="onEmailClick">
    </TextView>

    <TextView
        style="@style/AppBaseTheme"
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendheader"
        android:textColor="@android:color/darker_gray"
        android:textSize="10dp"
        android:layout_marginTop="8dp" />

    <EditText
        style="@style/AppBaseTheme"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:text = "@string/enterAnswerText"
        android:id="@+id/editText"
        android:minLines="5"
        android:textStyle="normal"
        android:editable="true" />

    <Button
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSendText2"
        android:id="@+id/button"
        android:layout_gravity="center"
        android:clickable="true"
        android:onClick="onButtonClick" />


</LinearLayout>